<resources>
    <string name="app_name">Atividade1</string>
    <string name="menu_welcome">Bem-vindo ao menu de exercícios ;)</string>
    <string name="what_you_wish_to_do">O que deseja fazer?</string>
    <string name="cylinder_volume_calculation">Calcular volume de um cilindro</string>
    <string name="convert_temperature">Converter temperatura</string>
    <string name="calculate_student_grade">Calcular média final de um aluno</string>
    <string name="calculate_box_consumption">Calcular consume de um carro</string>
    <string name="calculate_box_volume">Calcular volume de uma caixa</string>
    <string name="calculate_salary">Calcular salário</string>
    <string name="surprise">Surpresa!</string>
    <string name="box_volume_calculus">Cálculo do volume de uma caixa</string>
    <string name="age_calculus">Cálculo da idade de alguém com base no seu ano de nascimento</string>
    <string name="car_consumption">Cálculo do consumo por litro de um carro</string>
    <string name="final_score_calculus">Cálculo da média final de um aluno</string>
    <string name="temperature_convertion">Converter uma temperatura de °C para F</string>
    <string name="cylinder_calculus">Cálculo do volume de um cilindro</string>
    <string name="calculate_raise">Cálculo de aumento de salário $</string>
    <string name="inform_current_salary">Informe o salário atual:</string>
    <string name="ex_0_0">Ex: 0.0%</string>
    <string name="salary_percentage">Informe a porcentagem do salário:</string>
    <string name="salary">Salário</string>
    <string name="default_salary_message">Seu aumento foi de %f, e seu novo salário é %f!</string>
    <string name="inform_box_height">Informe a altura da caixa:</string>
    <string name="inform_meter_value">Informe o valor em metros!</string>
    <string name="inform_box_width">Informe a largura da caixa:</string>
    <string name="inform_box_length">Informe o comprimento da caixa:</string>
    <string name="inform_box_volume">O volume da caixa, em metros, é %f</string>
    <string name="all_fields_must_be_informed">Todos os campos precisam ser informados!</string>
    <string name="inform_birth_date">Informe o ano do seu nascimento:</string>
    <string name="your_age_is">Sua idade é %d anos</string>
    <string name="ex_1990">Ex: 1990</string>
    <string name="inform_km">Informe a quantidade de quilômetros percorridos:</string>
    <string name="km">Quilômetros</string>
    <string name="ex_km">Ex: 50.5</string>
    <string name="inform_gas_liters">Informe quantos litros foram abastecidos:</string>
    <string name="ex_liters">Ex: 25</string>
    <string name="inform_first_grade">Informe a primeira nota:</string>
    <string name="grades_hint">Informe valores positivos, entre 0 e 10!</string>
    <string name="inform_second_grade">Informe a segunda nota:</string>
    <string name="inform_third_grade">Informe a terceira nota:</string>
    <string name="inform_fourth_grade">Informe a quarta nota:</string>
    <string name="final_score">Sua nota final do semestre é %f</string>
    <string name="grade_validation">A nota informada deve estar entre 0 e 10!</string>
    <string name="age_validation">A idade deve ser maior que 1900 e menor ou igual ao ano atual!</string>
    <string name="age_message">Sua idade atual é %d</string>
    <string name="car_comsumption_message">O consumo do seu carro é de %f litros por km</string>
    <string name="inform_c_temperature">Informe a temperatura em °C:</string>
    <string name="ex_c_temperature">Ex: 18</string>
    <string name="temperature_message">A temperatura informada em F é %f</string>
    <string name="inform_cylinder_height">Informe a altura do cilindro:</string>
    <string name="inform_cylinder_base">Informe o raio da base do cilindro:</string>
    <string name="cylinder_volume_message">O volume do cilindro, em metros, é %f</string>
    <string name="calculate">Calcular</string>
    <string name="whats_this_text">Para que serve isso?</string>
</resources>