<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="#FFD700"
        android:fontFamily="monospace"
        android:text="@string/menu_welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/what_you_wish_to_do"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:background="#FF5733"
        android:text="@string/calculate_salary" />

    <Button
        android:id="@+id/btnVolumeCaixa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:background="#FFA500"
        android:text="@string/calculate_box_volume" />

    <Button
        android:id="@+id/btnIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:background="#FFEB3B"
        android:text="Calcular idade" />

    <Button
        android:id="@+id/btnCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:background="#008000"
        android:text="@string/calculate_box_consumption"
        android:textColor="#FAFFFFFF" />

    <Button
        android:id="@+id/btnMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:background="#0000FF"
        android:text="@string/calculate_student_grade"
        android:textColor="#FDFFFFFF" />

    <Button
        android:id="@+id/btnTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:background="#4B0082
"
        android:text="@string/convert_temperature"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnVolumeCilindro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:background="#800080"
        android:text="@string/cylinder_volume_calculation"
        android:textColor="#F7FFFFFF" />

    <Button
        android:id="@+id/btnSurpresa"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="#FFD700"
        android:text="@string/surprise"
        app:srcCompat="@android:drawable/ic_menu_help"
        tools:srcCompat="@android:drawable/ic_menu_help" />

</LinearLayout>