<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5F0C5"
    android:orientation="vertical"
    tools:context=".CarConsumptionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="#6ABF6E"
        android:fontFamily="monospace"
        android:text="@string/car_consumption"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/inform_km"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/ex_km"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inform_gas_liters"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtLitros"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/ex_liters"
        android:inputType="numberDecimal"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="#6ABF6E"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/edtConsumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />


</LinearLayout>