<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95E6AEB7"
    android:orientation="vertical"
    tools:context=".PaymentBonusCalculatorActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="#AEFF8BA0"
        android:fontFamily="monospace"
        android:text="@string/calculate_raise"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/inform_current_salary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/salary"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salary_percentage"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPorcentagem"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/ex_0_0"
        android:inputType="numberDecimal"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="#AEFF8BA0"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/txtSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>