<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0F4F4E6"
    android:orientation="vertical"
    tools:context=".FindAgeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="#F8E473"
        android:fontFamily="monospace"
        android:text="@string/age_calculus"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/inform_birth_date"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtAnoNascimento"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/ex_1990"
        android:inputType="numberSigned"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="#F8E473"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/edtIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/whats_this_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="italic" />

</LinearLayout>