<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCA580C1"
    android:orientation="vertical"
    tools:context=".TemperatureConverterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="#C49C61C8"
        android:fontFamily="monospace"
        android:text="@string/temperature_convertion"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/inform_c_temperature"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtCTemp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/ex_c_temperature"
        android:inputType="numberDecimal"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="#C49C61C8"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/edtFTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/whats_this_text"
        android:textAlignment="center"
        android:textColor="#CB673AB7"
        android:textStyle="italic"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


</LinearLayout>