<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B52A9DF4"
    android:orientation="vertical"
    tools:context=".FinalScoreCalculatorActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="#EE0786EF"
        android:fontFamily="monospace"
        android:text="@string/final_score_calculus"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/inform_first_grade"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNota1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/grades_hint"
        android:inputType="numberDecimal"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/inform_second_grade"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNota2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/grades_hint"
        android:inputType="numberDecimal"
        android:textStyle="italic"
        android:autofillHints="@string/grades_hint" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/inform_third_grade"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNota3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/grades_hint"
        android:inputType="numberDecimal"
        android:textStyle="italic"
        android:autofillHints="@string/grades_hint" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/inform_fourth_grade"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNota4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/grades_hint"
        android:inputType="numberDecimal"
        android:textStyle="italic"
        android:autofillHints="@string/grades_hint" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="#EE0786EF"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/edtMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>